yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo-system
  labels:
    app.kubernetes.io/component: gitops-demo-system
spec:
  type: ClusterIP
  ports:
    - port: 9080
      targetPort: 9080
      protocol: TCP
      name: 9080-tcp
  selector:
    app: gitops-demo-system
    app.kubernetes.io/name: gitops-demo-system
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
