yamls/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-demo-system
  labels:
    app.kubernetes.io/component: gitops-demo-system
spec:
  to:
    kind: Service
    name: gitops-demo-system
    weight: 100
  port:
    targetPort: 9080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
